# nanobot

./: .gitignore  CHANGELOG.md  Dockerfile  QUICKSTART.md  README.md  docker-compose.yml  keep_alive.sh  nanobot-gateway.service  nanobot-watchdog.service  nanobot.yaml.example  pyproject.toml
.github/workflows/: ci.yml
ark/: __main__.py  cli.py  manager.py  shadow.py  shadow_engine.py  slot_manager.py  snapshot_manager.py
ark_entry/: __init__.py  shadow.py
docs/: ARCHITECTURE.md  CORE_EXTENSIONS_SPLIT.md  EXTENSIONS_GLUE.md  README.md  RUNTIME_PATCH_SCRIPTS.md  chat-apps.md  quick-start.md
extensions/: README.md
extensions/reflexio/: __init__.py
nanobot/: QUICKSTART.md  __main__.py  llm_switcher.py  nanobot.py
nanobot/agent/: __init__.py  context.py  direct_reply.py  extensions.py  hook.py  inbox_reply.py  loop.py  memory.py  memory_reply.py  runner.py  subagent.py  warmup.py
nanobot/ark/: __init__.py  cli.py  gateway_shared.py  shadow_engine.py  shadow_gateway.py  snapshot_manager.py
nanobot/channels/: base.py  manager.py  msteams.py  qq.py  registry.py  weixin.py
nanobot/cli/: commands.py
nanobot/command/: builtin.py
nanobot/config/: env_override.py  hot_reload.py  loader.py  runtime_config.py  schema.py  validator.py
nanobot/cron/: service.py
nanobot/filters/: __init__.py  tee.py  token_tracker.py
nanobot/providers/: openai_compat_provider.py  registry.py
nanobot/security/: __init__.py  pairing.py  path_policy.py  permission_system.py
nanobot/session/: db_store.py  manager.py
nanobot/utils/: batch_processor.py  connection_pool.py  helpers.py  lazy_loader.py  platform.py
ops/: .gitignore  README.md
ops/config/: capabilities.json  sidecars.json
ops/docs/: restore.md
ops/sbin/: podman-port-forward-allow.sh  rust-sidecar-maintain
ops/scripts/: deploy-sidecar.sh  install-to-live.sh  (+3 more)
ops/sources/nanobot-reflexio-rs/: Cargo.toml  Dockerfile  QUICKSTART.md  README.md
ops/sources/nanobot-reflexio-rs/src/: cost_policy.rs  dashboard.html  embedding.rs  main.rs  provider.rs  reasoning.rs  storage.rs
ops/sources/obp-rs/: Cargo.toml
ops/sources/obp-rs/src/: config.rs  index.html  main.rs  proxy.rs  stats.rs
ops/sources/qq-sidecar-rs/: Cargo.toml
ops/sources/qq-sidecar-rs/src/: main.rs
ops/sources/trend-sidecar-rs/: Cargo.toml
ops/sources/trend-sidecar-rs/src/: main.rs
ops/sources/wechat-rss-rs/: Cargo.toml  Dockerfile.fast  build_fast_image.sh
ops/sources/wechat-rss-rs/src/: db.rs  main.rs
scripts/: apply_wechat_rss_rs.sh  backup_sessions.sh  dev_bootstrap.sh  dev_fast.sh  dev_test_fast.sh  install_extensions.sh  install_extentions.sh  memory_budget_check.sh  ops_quick_optimize.sh
tests/: test_api_attachment.py  test_msteams.py
watchdog/: __main__.py  daemon.py
(+77 files in other folders)
