[package]
name = "obp-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.9", features = ["json", "macros"] }
tokio = { version = "1.52.1", features = ["full"] }
reqwest = { version = "0.13.2", features = ["json", "stream", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tower-http = { version = "0.6.8", features = ["fs", "trace"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
futures-util = "0.3.32"
dotenvy = "0.15.7"
