[package]
name = "qq-sidecar-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.9", features = ["json", "macros"] }
tokio = { version = "1.52.1", features = ["full"] }
reqwest = { version = "0.13.2", features = ["json", "rustls", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
ring = "0.17.14"
hex = "0.4.3"
