[package]
name = "trend-sidecar-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.9", features = ["json", "macros"] }
tokio = { version = "1.52.1", features = ["full"] }
reqwest = { version = "0.13.2", features = ["json", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
