[package]
name = "wechat-rss-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.9", features = ["json", "macros"] }
tokio = { version = "1.52.1", features = ["full"] }
reqwest = { version = "0.13.2", features = ["json", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
rusqlite = { version = "0.39.0", features = ["bundled"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
futures-util = "0.3.32"
rss = "2.0.12"
scraper = "0.26.0"
html2md = "0.2.15"
chrono = { version = "0.4.44", features = ["serde"] }
regex = "1.12.2"
